# langfuse_wrapper

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROPOSAL.md  index.html  proposal.html
examples/: 01_basic_trace.py  02_llm_cost_tracking.py  03_langgraph_integration.py
scripts/: live_smoke.py
src/langfuse_wrapper/: __init__.py  _noop.py  client.py  config.py  cost.py  llm.py  prompts.py  scoring.py  scrubbing.py  tracing.py  types.py
src/langfuse_wrapper/integrations/: __init__.py  langchain.py
tests/: conftest.py  test_client_degradation.py  test_config.py  test_cost.py  test_integrations_langchain.py  test_llm.py  test_prompts.py  test_scoring.py  test_scrubbing.py  test_tracing.py
